--- a/src/search.less
+++ b/src/search.less
@@ -1,4 +1,9 @@
+@font-face {
+    font-family: "SourceHanSerifCN-Heavy";
+    src: url("./images/SourceHanSerifCN-Heavy.otf");
+}
 .search-text{
-    font-size: 20px;
-    color:#f00;
+    font-size : 20px;
+    color : #f00;
+    font-family: "SourceHanSerifCN-Heavy";
 }
