--- a/src/search.less
+++ b/src/search.less
@@ -1,9 +1,9 @@
 @font-face {
-    font-family: "SourceHanSerifCN-Heavy";
-    src: url("./images/SourceHanSerifCN-Heavy.otf");
+    font-family: "SourceHanSerifCN-Heav";
+    src: url("./images/SourceHanSerifCN-Heavy.otf") format("truetype");
 }
 .search-text{
     font-size : 20px;
     color : #f00;
-    font-family: "SourceHanSerifCN-Heavy";
+    font-family: "SourceHanSerifCN-Heav";
 }
